# PresentationMaterialsAnalysis

./: README.md
cvpr_citations/: .env.example  .gitignore  PROJECT_GITHUB.md  README.md  apply_corrections.py  citation_comparison.py  conf_utils.py  export_corrections.py  main.py  pyproject.toml  retry_normalized.py  run_corrections.sh  run_full.sh  run_normalize.sh  run_project_github.sh  run_statistics.sh  run_test.sh  run_test_project_github.sh  run_topn.sh  scrape_links.py  scrape_project_github.py  scraper.py  semantic_scholar.py  similarity_stats.py  top10.py  top5_all_years.py  topn.py  visualize.py  visualize_project_github.py
